--- a/src/main/resources/templates/Events/scan.html
+++ b/src/main/resources/templates/Events/scan.html
@@ -81,33 +81,25 @@
 
 <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
-        <a href="/" class="logo d-flex align-items-center me-auto">
+        <a href="/static" class="logo d-flex align-items-center me-auto">
             <h1 class="sitename">SecurePass</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/static">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/events">Events</a></li>
-                <li>
-                    <form th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}">
-                        <a  type="submit" href="/createEvent">Create Event</a>
-                    </form>
-                </li>                <li><a href="/pricing">Pricing</a></li>
-                <li class="dropdown"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}">
+                    <a href="/createEvent">Create Event</a>
+                </li>
+                <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}" class="dropdown">
+                    <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
-                        <li><a href="#">Event Planning Guide</a></li>
-                        <li class="dropdown"><a href="#"><span>Support</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                            <ul>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Troubleshooting</a></li>
-                                <li><a href="#">Contact Support</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="/MyEvents">My Events</a></li>
                     </ul>
                 </li>
+                <li><a href="/pricing">Pricing</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -142,7 +134,7 @@
     <div class="container footer-top">
         <div class="row gy-4">
             <div class="col-lg-4 col-md-6 footer-about">
-                <a href="/" class="logo d-flex align-items-center">
+                <a href="/static" class="logo d-flex align-items-center">
                     <span class="sitename">SecurePass</span>
                 </a>
                 <div class="footer-contact pt-3">
@@ -161,7 +153,7 @@
             <div class="col-lg-2 col-md-3 footer-links">
                 <h4>Useful Links</h4>
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="/static">Home</a></li>
                     <li><a href="/about">About Us</a></li>
                     <li><a href="/events">Events</a></li>
                     <li><a href="#">Terms of Service</a></li>
