--- a/src/main/resources/templates/Home/eventDetails.html
+++ b/src/main/resources/templates/Home/eventDetails.html
@@ -120,21 +120,16 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/events">Events</a></li>
-                <li><a href="/createEvent">Create Event</a></li>
-                <li><a href="/pricing" class="active">Pricing</a></li>
-                <li class="dropdown"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}">
+                    <a href="/createEvent">Create Event</a>
+                </li>
+                <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}" class="dropdown">
+                    <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
-                        <li><a href="#">Event Planning Guide</a></li>
-                        <li class="dropdown"><a href="#"><span>Support</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                            <ul>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Troubleshooting</a></li>
-                                <li><a href="#">Contact Support</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="/MyEvents">My Events</a></li>
                     </ul>
                 </li>
+                <li><a href="/pricing">Pricing</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
