--- a/src/main/resources/templates/Events/createEvent.html
+++ b/src/main/resources/templates/Events/createEvent.html
@@ -120,20 +120,13 @@
                 <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}">
                     <a href="/createEvent">Create Event</a>
                 </li>
-                <li><a href="/pricing">Pricing</a></li>
-                <li class="dropdown"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}" class="dropdown">
+                    <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
-                        <li><a href="#">Event Planning Guide</a></li>
-                        <li class="dropdown"><a href="#"><span>Support</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                            <ul>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Troubleshooting</a></li>
-                                <li><a href="#">Contact Support</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="/MyEvents">My Events</a></li>
                     </ul>
                 </li>
+                <li><a href="/pricing">Pricing</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -161,6 +154,7 @@
                     <input type="text" class="form-control" id="eventName" name="name" required>
                 </div>
                 <div class="mb-3">
+
                     <label for="eventDescription" class="form-label">Event Description</label>
                     <textarea class="form-control" id="eventDescription" name="description" rows="4" required></textarea>
                 </div>
