--- a/src/main/resources/templates/Events/myEvents.html
+++ b/src/main/resources/templates/Events/myEvents.html
@@ -266,7 +266,10 @@
                                             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                                             <button type="submit" class="myevents-btn myevents-btn-danger me-2">Delete Event</button>
                                         </form>
-                                        <button type="button" class="myevents-btn myevents-btn-primary">Scan</button>
+                                        <form th:action="@{/scan/{id}(id=${event.id})}" method="post" style="display:inline;">
+<!--                                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+                                            <button type="submit" class="myevents-btn myevents-btn-primary">Scan</button>
+                                        </form>
                                     </td>
                                 </tr>
                                 <!-- Additional rows for sessions (index > 0) -->
@@ -288,9 +291,11 @@
                                         <a th:href="@{/modifyEvent/{id}(id=${event.id})}" class="myevents-btn myevents-btn-warning me-2">Modify Event</a>
                                         <form th:action="@{/deleteEvent/{id}(id=${event.id})}" method="post" style="display:inline;">
                                             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                                            <button type="submit" class="myevents-btn myevents-btn-danger me-2">Delete Event</button>
+                                            <button type="submit" class="myevents-btn myevents-btn-danger me-2">Delete Eventhi</button>
                                         </form>
-                                        <button th:href="@{/scan/{eventId}(eventId=${event.id})}" class="myevents-btn myevents-btn-primary">Scan</button>
+                                        <form th:action="@{/scan/{eventId}(eventId=${event.id})}" method="post" style="display:inline;">
+                                            <button type="submit" class="myevents-btn myevents-btn-primary">Scan</button>
+                                        </form>
                                     </td>
                                 </tr>
                             </th:block>
